@@ -137,6 +137,85 @@
             </property>
            </widget>
           </item>
+          <item row="4" column="1">
+           <widget class="QTabWidget" name="tabWidget_notes">
+            <property name="currentIndex">
+             <number>0</number>
+            </property>
+            <widget class="QWidget" name="tab_notes_raw">
+             <attribute name="title">
+              <string>Raw (markdown)</string>
+             </attribute>
+             <layout class="QVBoxLayout" name="verticalLayout_8">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QPlainTextEdit" name="plainTextEdit_notes">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>450</width>
+                  <height>400</height>
+                 </size>
+                </property>
+                <property name="acceptDrops">
+                 <bool>false</bool>
+                </property>
+                <property name="placeholderText">
+                 <string>Desicription of the dataset, select the &quot;Preview&quot; tab for a rendered version.</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="tab_notes_preview">
+             <attribute name="title">
+              <string>Preview</string>
+             </attribute>
+             <layout class="QVBoxLayout" name="verticalLayout_9">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
+               <widget class="QTextEdit" name="textEdit_preview">
+                <property name="readOnly">
+                 <bool>true</bool>
+                </property>
+                <property name="markdown">
+                 <string>This is an **example** text.
+
+</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </widget>
+          </item>
           <item row="4" column="0">
            <widget class="QLabel" name="label_5">
             <property name="acceptDrops">
@@ -144,28 +223,6 @@
             </property>
             <property name="text">
              <string>Description</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QPlainTextEdit" name="plainTextEdit_notes">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>450</width>
-              <height>400</height>
-             </size>
-            </property>
-            <property name="acceptDrops">
-             <bool>false</bool>
-            </property>
-            <property name="placeholderText">
-             <string>General description.</string>
             </property>
            </widget>
           </item>
@@ -563,7 +620,7 @@
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>509</width>
+                     <width>382</width>
                      <height>557</height>
                     </rect>
                    </property>
