@@ -1,5 +1,6 @@
 0.18.3
  - enh: allow sharing individual datasets instead of collections (#32)
+ - enh: add preview option for dataset description in upload dialog (#52)
 0.18.2
  - ref: make action buttons in filter view hideable
 0.18.2
